# RSUH-Sociology

./: .gitignore  README.md  R_packages.txt  pdm.toml  pyproject.toml  requirements.txt  start.py
data/: sample_texts.csv
output/tables/: documents.csv  stat_tests.txt  stats_summary.csv  word_freq.csv
scripts/: analysis.py  menu.py  parser.py  pipeline.py  preprocess.py  r_bridge.py  wordcloud_gen.py
scripts/r/: install_packages.R  stats_viz.R
